force-app/main/default/objects/GFH_Settings__mdt/GFH_Settings__mdt.object-meta.xml
<CustomObject>
    <label>GFH Settings</label>
    <pluralLabel>GFH Settings</pluralLabel>
    <nameField>
        <label>Developer Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>