force-app/main/default/objects/GFH_Settings__mdt/fields/BaseCurrencyIso__c.field-meta.xml
<CustomField>
    <fullName>BaseCurrencyIso__c</fullName>
    <label>BaseCurrencyIso</label>
    <type>Text</type>
    <length>3</length>
</CustomField>