force-app/main/default/objects/GFH_Settings__mdt/fields/DefaultLocale__c.field-meta.xml
<CustomField>
    <fullName>DefaultLocale__c</fullName>
    <label>DefaultLocale</label>
    <type>Text</type>
    <length>10</length>
</CustomField>