force-app/main/default/objects/GFH_Settings__mdt/fields/EnableDemoMode__c.field-meta.xml
<CustomField>
    <fullName>EnableDemoMode__c</fullName>
    <label>Enable Demo Mode</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>