force-app/main/default/objects/GFH_Settings__mdt/fields/MaxItemsPerPage__c.field-meta.xml
<CustomField>
    <fullName>MaxItemsPerPage__c</fullName>
    <label>Max Items Per Page</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>