force-app/main/default/objects/GFH_Settings__mdt/fields/SupportEmail__c.field-meta.xml
<CustomField>
    <fullName>SupportEmail__c</fullName>
    <label>SupportEmail</label>
    <type>Text</type>
    <length>80</length>
</CustomField>